--- a/Durangling.MinecraftWrapper/Durangling.MinecraftWrapper.csproj
+++ b/Durangling.MinecraftWrapper/Durangling.MinecraftWrapper.csproj
@@ -5,6 +5,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>Minecraft</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="World\Levels\" />
+    </ItemGroup>
 
 </Project>
